--- a/.github/workflows/scout.yml
+++ b/.github/workflows/scout.yml
@@ -1,16 +1,13 @@
 name: Swipe-File-Scout
+
 on:
-  schedule:
-    - cron: '30 15 * * 1'   # 08:30 PT every Monday
-  workflow_dispatch:        # lets you test on demand
+  workflow_dispatch:
+
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Skip odd weeks (run bi-weekly)
-        run: |
-          if [ $(( $(date +%U) % 2 )) -eq 1 ]; then
-            echo "Odd week — skipping"; exit 0; fi
       - uses: actions/checkout@v4
 
       - name: Install deps
@@ -18,8 +15,11 @@ jobs:
 
       - name: Run scout
         env:
-          FB_TOKEN: ${{ secrets.FB_TOKEN }}
-          REDDIT_ID: ${{ secrets.REDDIT_ID }}
+          FB_TOKEN:      ${{ secrets.FB_TOKEN }}
+          REDDIT_ID:     ${{ secrets.REDDIT_ID }}
           REDDIT_SECRET: ${{ secrets.REDDIT_SECRET }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          EMAIL_FROM:    ${{ secrets.EMAIL_FROM }}
+          EMAIL_PW:      ${{ secrets.EMAIL_PW }}
+          EMAIL_TO:      ${{ secrets.EMAIL_TO }}
         run: python scout.py
