--- a/.github/workflows/scout.yml
+++ b/.github/workflows/scout.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install requests vaderSentiment python-dotenv
+          pip install requests vaderSentiment python-dotenv beautifulsoup4
 
       - name: Run swipe-file scout
         env:
